# Monte-Carlo-Simulation-of-Light-Propagation

./: .gitignore  CMakeLists.txt  README.md  main  main.cu  main.cu.autosave  plotting.py  randomWalkPlotter.py  test_runs.cu
3D-Random-Walk-C++/: CMakeLists.txt  checkDistribution.py  main  main.cpp  randomWalkPlotter.py  test_runs.cpp
3D-Random-Walk-C++/code/headers/: Detector.h  Photon.h  Point.h  RNG.h  Ray.h  Tissue.h  Vector.h  common.h  mathematics.h  randomwalk.h
3D-Random-Walk-C++/code/src/: Photon.cpp  Point.cpp  RNG.cpp
3D-Random-Walk-C++/metrics/: CMakeLists.txt  test_runs.cpp
MC_Simulation_CUDA/: CMakeLists.txt  main.cu
MC_Simulation_CUDA/Network/Client/Headers/: ClientSocket.h  socket.h
MC_Simulation_CUDA/Network/Client/Sources/: ClientSocket.cpp  socket.cpp
MC_Simulation_CUDA/Network/ServerSide/: Photon.cpp  Point.cpp  Point.h  ServerSide.pro  ServerUI.cpp  TcpServer.cpp  TcpServer.h  Thread.cpp  Thread.h  main.cpp
MC_Simulation_CUDA/Network/build-ServerSide-Desktop-Debug/: Makefile  ServerSide  moc_ServerUI.cpp  moc_TcpServer.cpp  moc_Thread.cpp  ui_ServerUI.h
MC_Simulation_CUDA/code/headers/: MC_Detector.cuh  MC_FiberGenerator.cuh  MC_Helpers.cuh  MC_Kernels.cuh  MC_MLTissue.cuh  MC_Math.cuh  MC_Path.cuh  MC_Photon.cuh  MC_Point.cuh  MC_RNG.cuh  MC_RandomWalk.cuh  MC_Ray.cuh  MC_Simulation.cuh  MC_Tissue.cuh
MC_Simulation_CUDA/code/src/: MC_Detector.cu  MC_Helpers.cu  MC_Kernels.cu  MC_MLTissue.cu  MC_Math.cu  MC_Path.cu  MC_Photon.cu  MC_Point.cu  MC_RNG.cu  MC_Ray.cu  MC_Simulation.cu  MC_Tissue.cu
Network/Client/: CMakeLists.txt  main.cu
Network/Client/Headers/: socket.h
Network/Client/Sources/: socket.cpp
Network/Headers/: socket.h
Network/Server/serverSide/: ServerSide.pro  ServerUI.ui  main.cpp
Network/ServerSide/build-server-Desktop-Debug/: Makefile  moc_initiateServer.cpp  moc_serverside.cpp  moc_threads.cpp  server  server.csv  ui_serverside.h
Network/ServerSide/build-server-Unnamed-Debug/: Makefile  moc_initiateserver.cpp  moc_serverside.cpp  moc_threads.cpp  server
Network/ServerSide/build-server-Unnamed_9f4171-Debug/: Makefile  moc_initiateServer.cpp  moc_serverside.cpp  moc_threads.cpp  server  ui_serverside.h
Network/ServerSide/server/: Point.h  initiateServer.cpp  initiateServer.h  main.cpp  server.pro  server.pro.user.a42c1f5  serverside.cpp  serverside.h  serverside.ui  threads.cpp  threads.cpp.autosave  threads.h
Network/Sources/: socket.cpp
Sample Results/: .xdp_profile.TSS2H0  cpu_results_p10000_a1000_s100.csv  cpu_results_p10000_a100_s100.csv  cpu_results_p10000_a10_s100.csv  cpu_results_p10000_a1_s100.csv  cpu_results_p1000_a1000_s100.csv  cpu_results_p1000_a100_s100.csv  cpu_results_p1000_a10_s100.csv  cpu_results_p1000_a1_s100.csv  gpu_results_p10000_a100_s100.csv  gpu_results_p1000_a1000_s100.csv  gpu_results_p1000_a100_s100.csv  gpu_results_p1000_a10_s100.csv
Simulation/: CMakeLists.txt  main.cu  test.cu
Simulation/code/headers/: MC_FiberGenerator.cuh  MC_Kernels.cuh  MC_Path.cuh  MC_RandomWalk.cuh  MC_Tissue.cuh
Simulation/code/src/: MC_Kernels.cu  MC_Simulation.cu
apps/: Point.cu  RandomWalk.cu  RandomnessGenerator.cu  Ray.cu
archive/: Boundary.cu  parsing.cpp
build-MC_Simulation_CUDA-Desktop-Debug/: CMakeCache.txt  MC_Simulation  MC_Simulation.cbp  Makefile  Results.csv  cmake_install.cmake  qtcsettings.cmake
build-MC_Simulation_CUDA-Desktop-Debug/MC_Simulation_autogen/: moc_predefs.h
build-MC_Simulation_CUDA-Desktop-Debug/MC_Simulation_autogen/ZTA52AVVIS/: moc_socket.cpp
build-MC_Simulation_CUDA-Unnamed_6e5b11-Default/: CMakeCache.txt  MC_simulation.cbp  Makefile  clientSentPhotons.csv  cmake_install.cmake
c++/: CMakeLists.txt  main.cpp
c++/code/headers/: Detector.h  Photon.h  Point.h  Tissue.h  common.h  randomwalk.h
c++/code/src/: Detector.cpp  Point.cpp  RNG.cpp  Ray.cpp  Tissue.cpp  Vector.cpp  mathematics.cpp
code/headers/: Boundary.h  Detector.h  Photon.h  Point.h  RNG.h  RandomWalk.h  Ray.h  Tissue.h  Vector.h  common.h  mathematics.h  randomwalk.h
code/src/: Detector.cu  Photon.cu  RNG.cu  Ray.cu  Tissue.cu  mathematics.cu
cuda/: CMakeLists.txt  main.cu
cuda/code/headers/: Detector.h  (+8 more)
doc/: Doxyfile
doc/html/: _boundary_8h_source.html  _detector_8h.html  _detector_8h__dep__incl.dot  _detector_8h__incl.dot  _detector_8h_source.html  _photon_8h.html  _photon_8h__dep__incl.dot  _photon_8h__incl.dot  _photon_8h_source.html  _point_8h.html  _point_8h__dep__incl.dot  _point_8h_source.html  _r_n_g_8h.html  _r_n_g_8h__dep__incl.dot  _r_n_g_8h__incl.dot  _r_n_g_8h_source.html  _ray_8h.html  _ray_8h__dep__incl.dot  _ray_8h__incl.dot  _ray_8h_source.html  _tissue_8h.html  _tissue_8h__dep__incl.dot  _tissue_8h__incl.dot  _tissue_8h_source.html  _vector_8h.html  _vector_8h__dep__incl.dot  _vector_8h__incl.dot  _vector_8h_source.html  annotated.html  annotated_dup.js  class_boundary-members.html  class_boundary.html  class_detector-members.html  class_detector.html  class_detector.js  class_photon-members.html  class_photon.html  class_photon.js  class_point-members.html  class_point.html  (+72 more)
gui/RandomWalk_Ui/: Extractor.py  analytics.py  commands.py  controller.py  logic.py  minimal.py  minimal.ui  mplwidget.py  plotter.py
include/: Point.h  RandomnessGenerator.h  header.h
metrics/: cpuVSgpu.py  metrics.csv  performance.py  test_runs.cpp
source_files/: Boundary.cu  Boundary.h  MyMathLibrary.h  Point.cu  Point.h  RandomWalk.cu  RandomWalk.h  RandomnessGenerator.cu  RandomnessGenerator.h  Ray.cu  Ray.h  header.h  main.cu
src/: Boundary.cu  Boundary.h  Detector.cu  Detector.h  Photon.cu  Photon.h  Point.cu  Point.h  RNG.cu  RNG.h  RandomWalk.h  Ray.cu  Ray.h  Tissue.cu  Tissue.h  TissueTest.cu  Vector.cu  Vector.h  common.h  compilable.cu  detectorTest.cu  main.cu  vectorMathTest.cu
visual/blending/: detector.blend
visual/plotting/: MC_Plotter.py  plotter.py  profiling.py  randomWalkPlotter.py
visual/results/: .xdp_10000.KJ4LH0  gpu_results_p10000_a1000_s100.csv  gpu_results_p10000_a10_s100.csv  gpu_results_p10000_a1_s100.csv  gpu_results_p1000_a1_s100.csv
(+97 files in other folders)
